# ai-resume-analyser

./: README.md  main.py  pyproject.toml  requirements.txt
